partially done pdfjs integrated

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="Research Repository"
 APP_ENV=local
 APP_KEY=base64:Z/NorPE2nxYxobltAHKDt86HXmRPmBBz8M1KRQn1QC0=
 APP_DEBUG=true
