--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vite": "^6.2.4"
     },
     "dependencies": {
+        "@heroicons/react": "^2.2.0",
         "flowbite": "^3.1.2"
     }
 }
