--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "@heroicons/react": "^2.2.0",
+        "@ksedline/turnjs": "^0.1.0",
         "flowbite": "^3.1.2"
     }
 }
