--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME="Research Repository"
+APP_NAME="Insight Hub"
 APP_ENV=local
 APP_KEY=base64:Z/NorPE2nxYxobltAHKDt86HXmRPmBBz8M1KRQn1QC0=
 APP_DEBUG=true
@@ -34,7 +34,7 @@ SESSION_PATH=/
 SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
-FILESYSTEM_DISK=local
+FILESYSTEM_DISK=public
 QUEUE_CONNECTION=database
 
 CACHE_STORE=database
