--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=resrepo
 DB_USERNAME=root
-DB_PASSWORD=140053Ken!
+DB_PASSWORD=140053ken!
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
