--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - ./:/var/www/html
     environment:
       - DB_CONNECTION=mysql
-      - DB_HOST=host.docker.internal  # or your external IP (e.g., 192.168.1.100)
+      - DB_HOST=host.docker.internal  # Or external IP
       - DB_PORT=3306
       - DB_DATABASE=laravel
       - DB_USERNAME=root
@@ -25,12 +25,13 @@ services:
     image: nginx:alpine
     container_name: laravel-nginx
     ports:
-      - "8080:80"
+      - "8000:80"
     volumes:
       - ./:/var/www/html
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - app
+      - frontend
     networks:
       - laravel
 
@@ -39,6 +40,20 @@ services:
     container_name: laravel-redis
     ports:
       - "6379:6379"
+    networks:
+      - laravel
+
+  frontend:
+    build:
+      context: ./docker/frontend
+      dockerfile: Dockerfile
+    container_name: laravel-frontend
+    working_dir: /app
+    volumes:
+      - ./:/app
+    command: ["npm", "run", "dev"]
+    ports:
+      - "5173:5173"  # Vite port
     networks:
       - laravel
 
