ready for docker deploy

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME="Insight Hub"
 APP_ENV=local
-APP_KEY=base64:Z/NorPE2nxYxobltAHKDt86HXmRPmBBz8M1KRQn1QC0=
+APP_KEY=base64:yQRqHSavFKhqLqAiH+/kVWF06MhQv3v6wWf0rt9MLMY=
 APP_DEBUG=true
-APP_URL=http://localhost:8000
+APP_URL=http://localhost:8001
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -22,11 +22,11 @@ LOG_LEVEL=debug
 
 #DB_CONNECTION=sqlite
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1 #host.docker.internal
+DB_HOST=host.docker.internal
 DB_PORT=3306
 DB_DATABASE=resrepo
-DB_USERNAME=ken
-DB_PASSWORD=140053ken
+DB_USERNAME=root
+DB_PASSWORD=140053ken!
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -64,5 +64,5 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
-VITE_HOST=0.0.0.0
+VITE_HOST=localhost
 VITE_PORT=5173
