--- a/.env
+++ b/.env
@@ -2,14 +2,15 @@ APP_NAME="Insight Hub"
 APP_ENV=local
 APP_KEY=base64:yQRqHSavFKhqLqAiH+/kVWF06MhQv3v6wWf0rt9MLMY=
 APP_DEBUG=true
+#APP_URL=http://laravel_research_repo.test
 APP_URL=http://localhost:8001
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
-APP_MAINTENANCE_DRIVER=file
-# APP_MAINTENANCE_STORE=database
+#APP_MAINTENANCE_DRIVER=file
+APP_MAINTENANCE_STORE=database
 
 PHP_CLI_SERVER_WORKERS=4
 
@@ -22,13 +23,14 @@ LOG_LEVEL=debug
 
 #DB_CONNECTION=sqlite
 DB_CONNECTION=mysql
-DB_HOST=host.docker.internal
+DB_HOST=192.168.0.100
 DB_PORT=3306
-DB_DATABASE=resrepo
-DB_USERNAME=root
-DB_PASSWORD=140053ken!
+DB_DATABASE=resrepo-dev
+DB_USERNAME=ken
+DB_PASSWORD=140053ken
 
 SESSION_DRIVER=database
+#SESSION_DRIVER=file #database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
@@ -36,8 +38,10 @@ SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=public
+#QUEUE_CONNECTION=sync  #database
 QUEUE_CONNECTION=database
 
+#CACHE_STORE=file #database
 CACHE_STORE=database
 # CACHE_PREFIX=
 
