--- a/.env.dev
+++ b/.env.dev
@@ -9,8 +9,8 @@ APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
-
-APP_MAINTENANCE_STORE=database
+APP_MAINTENANCE_DRIVER=file
+#APP_MAINTENANCE_STORE=database
 
 PHP_CLI_SERVER_WORKERS=4
 
@@ -21,16 +21,16 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-#DB_CONNECTION=sqlite
-DB_CONNECTION=mysql
-DB_HOST=192.168.0.100
-DB_PORT=3306
-DB_DATABASE=resrepo-dev
-DB_USERNAME=ken
-DB_PASSWORD=140053ken
+DB_CONNECTION=sqlite
+#DB_CONNECTION=mysql
+#DB_HOST=192.168.0.100
+#DB_PORT=3306
+#DB_DATABASE=resrepo-dev
+#DB_USERNAME=ken
+#DB_PASSWORD=140053ken
 
-SESSION_DRIVER=database
-#SESSION_DRIVER=file #database
+#SESSION_DRIVER=database
+SESSION_DRIVER=file #database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
@@ -38,11 +38,11 @@ SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=public
-#QUEUE_CONNECTION=sync  #database
-QUEUE_CONNECTION=database
+QUEUE_CONNECTION=sync  #database
+#QUEUE_CONNECTION=database
 
-#CACHE_STORE=file #database
-CACHE_STORE=database
+CACHE_STORE=file #database
+#CACHE_STORE=database
 # CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
