fix number 5 working on ken-dev tested

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:yQRqHSavFKhqLqAiH+/kVWF06MhQv3v6wWf0rt9MLMY=
 APP_DEBUG=true
 #APP_URL=http://laravel_research_repo.test
-APP_URL=http://localhost:8001
+APP_URL=http://127.0.0.1:8001
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
