--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,43 +4,38 @@ services:
   app:
     build:
       context: .
-      dockerfile: Dockerfile
-    container_name: insighthub-app
+      dockerfile: Dockerfile.dev
+    container_name: insighthub-app-dev
     working_dir: /var/www/html
     volumes:
+      - .:/var/www/html
       - ./storage:/var/www/html/storage
       - ./bootstrap/cache:/var/www/html/bootstrap/cache
     environment:
-      - APP_ENV=production
+      - APP_ENV=local
       - APP_URL=http://localhost:8001
-      - APP_DEBUG=false
+      - APP_DEBUG=true
       - CACHE_DRIVER=file
       - SESSION_DRIVER=file
       - QUEUE_DRIVER=sync
     restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "php-fpm", "-t"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
     networks:
       - app-network
 
   nginx:
     image: nginx:alpine
-    container_name: insighthub-nginx
+    container_name: insighthub-nginx-dev
     ports:
       - "8001:80"
     volumes:
       - ./public:/var/www/html/public:ro
       - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
-      app:
-        condition: service_healthy
+      - app
     restart: unless-stopped
     networks:
       - app-network
 
 networks:
   app-network:
-    driver: bridge
+    driver: bridge 
