--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -18,6 +18,21 @@ http {
         root /var/www/html/public;
         index index.php index.html;
 
+        # Serve build assets with proper headers
+        location /build/ {
+            try_files $uri $uri/ =404;
+            add_header Access-Control-Allow-Origin *;
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";
+            add_header Access-Control-Allow-Headers "Content-Type, Authorization";
+        }
+
+        # Handle CORS preflight requests
+        location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+            add_header Access-Control-Allow-Origin *;
+        }
+
         location / {
             try_files $uri $uri/ /index.php?$query_string;
         }
