--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 
 services:
   app:
@@ -10,6 +9,7 @@ services:
     volumes:
       - ./storage:/var/www/html/storage
       - ./bootstrap/cache:/var/www/html/bootstrap/cache
+      - public-assets:/shared/public
     environment:
       - APP_ENV=production
       - APP_URL=http://localhost:8001
@@ -32,7 +32,7 @@ services:
     ports:
       - "8001:80"
     volumes:
-      - ./public:/var/www/html/public:ro
+      - public-assets:/var/www/html/public:ro
       - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       app:
@@ -40,6 +40,9 @@ services:
     restart: unless-stopped
     networks:
       - app-network
+
+volumes:
+  public-assets:
 
 networks:
   app-network:
