docker build tested all feature working

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -32,6 +32,9 @@ RUN apt-get update && apt-get install -y \
 # Install Composer
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 
+# Copy custom PHP configuration
+COPY docker/php/php.ini /usr/local/etc/php/conf.d/custom.ini
+
 WORKDIR /var/www/html
 
 # Copy composer files
