--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,10 @@ services:
     container_name: insighthub-app
     working_dir: /var/www/html
     volumes:
-      - ./storage:/var/www/html/storage
+      - storage-data:/var/www/html/storage
       - ./bootstrap/cache:/var/www/html/bootstrap/cache
       - public-assets:/shared/public
+      - ./docker/php/php.ini:/usr/local/etc/php/conf.d/custom.ini:ro
     environment:
       - APP_ENV=production
       - APP_URL=http://localhost:8001
@@ -33,6 +34,7 @@ services:
       - "8001:80"
     volumes:
       - public-assets:/var/www/html/public:ro
+      - storage-data:/var/www/html/storage:ro
       - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       app:
@@ -43,6 +45,7 @@ services:
 
 volumes:
   public-assets:
+  storage-data:
 
 networks:
   app-network:
