--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -15,6 +15,8 @@ http {
         listen 80;
         server_name localhost;
 
+        client_max_body_size 10M;
+
         root /var/www/html/public;
         index index.php index.html;
 
@@ -28,6 +30,15 @@ http {
 
         # Handle CORS preflight requests
         location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+            add_header Access-Control-Allow-Origin *;
+        }
+
+        # Handle storage requests by serving files directly from storage directory
+        location /storage/ {
+            alias /var/www/html/storage/app/public/;
+            try_files $uri $uri/ =404;
             expires 1y;
             add_header Cache-Control "public, immutable";
             add_header Access-Control-Allow-Origin *;
