--- a/.env-dev
+++ b/.env-dev
@@ -9,8 +9,8 @@ APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
-
-APP_MAINTENANCE_STORE=database
+APP_MAINTENANCE_DRIVER=file
+#APP_MAINTENANCE_STORE=database
 
 PHP_CLI_SERVER_WORKERS=4
 
@@ -21,13 +21,13 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-#DB_CONNECTION=sqlite
-DB_CONNECTION=mysql
-DB_HOST=10.2.42.8
-DB_PORT=3306
-DB_DATABASE=resrepo
-DB_USERNAME=root
-DB_PASSWORD=140053ken!
+DB_CONNECTION=sqlite
+#DB_CONNECTION=mysql
+#DB_HOST=192.168.0.100
+#DB_PORT=3306
+#DB_DATABASE=resrepo-dev
+#DB_USERNAME=ken
+#DB_PASSWORD=140053ken
 
 #SESSION_DRIVER=database
 SESSION_DRIVER=file #database
