--- a/.env
+++ b/.env
@@ -23,7 +23,7 @@ LOG_LEVEL=debug
 
 #DB_CONNECTION=sqlite
 DB_CONNECTION=mysql
-DB_HOST=10.2.42.7
+DB_HOST=host.docker.internal
 DB_PORT=3306
 DB_DATABASE=resrepo
 DB_USERNAME=root
@@ -45,16 +45,16 @@ QUEUE_CONNECTION=database
 CACHE_STORE=database
 # CACHE_PREFIX=
 
-MEMCACHED_HOST=127.0.0.1
+MEMCACHED_HOST=host.docker.internal
 
 REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
+REDIS_HOST=host.docker.internal
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=log
 MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
+MAIL_HOST=host.docker.internal
 MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
@@ -68,5 +68,5 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
-VITE_HOST=localhost
+VITE_HOST=host.docker.internal
 VITE_PORT=5173
